<resources>
    <string name="app_name">MySafeRest</string>

    <string name="price_format">%.2f €</string>

    <string name="table_reserved_one_desc_format">** Reservada (%d x Cliente) **</string>
    <string name="table_reserved_many_desc_format">** Reservada (%d x Clientes) **</string>
    <string name="table_busy_one_desc_format">%d x Cliente (%.2f €)</string>
    <string name="table_busy_many_desc_format">%d x Clientes (%.2f €)</string>
    <string name="table_list_actionsheet_menu_setbusy">Abrir Mesa</string>
    <string name="table_list_actionsheet_menu_setreserved">Reservar</string>
    <string name="table_list_actionsheet_menu_setavailable">Cancelar Reserva</string>

    <string name="table_view_header_customersLabel">Clientes:</string>
    <string name="table_view_header_totalAmount_format">Total: %.2f €</string>
    <string name="table_view_closeTable_confirm_title">Cerrar Mesa</string>
    <string name="table_view_closeTable_confirm_message">¿Cerrar mesa y borrar el pedido en curso?</string>
    <string name="table_view_closeTable_confirm_yes">Sí</string>
    <string name="table_view_closeTable_confirm_no">No</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_line_editor_photo_desc">Foto del plato seleccionado</string>
    <string name="order_line_editor_notes_hint"> Anotaciones del cliente…</string>
    <string name="mneu_order_line_editor_ok_button">OK</string>
    <string name="meal_list_item_photo_desc">Foto</string>
    <string name="app_default_image_desc">-</string>
    <string name="menu_order_editor_closeTable_button">Cerrar Mesa</string>
</resources>
