<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.OrderLineEditorFragment">

    <ImageView
        android:id="@+id/meal_photo"
        android:layout_width="@dimen/order_line_editor_photo_size"
        android:layout_height="@dimen/order_line_editor_photo_size"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/order_line_editor_photo_desc"/>

    <LinearLayout
        android:id="@+id/line_editor_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/meal_photo"
        android:layout_toEndOf="@id/meal_photo"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/order_line_editor_margin"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@id/meal_photo"
        android:orientation="vertical">

        <TextView
            android:id="@+id/meal_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/order_line_editor_marginTop"
            android:layout_marginLeft="@dimen/order_line_editor_margin"
            android:layout_marginStart="@dimen/order_line_editor_margin"
            android:textSize="@dimen/order_line_editor_name_size"
            android:textStyle="bold"
            android:textColor="@color/order_line_editor_name_color"/>

        <TextView
            android:id="@+id/meal_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/order_line_editor_margin_tiny"
            android:layout_marginLeft="@dimen/order_line_editor_margin"
            android:layout_marginStart="@dimen/order_line_editor_margin"
            android:textSize="@dimen/order_line_editor_price_size"/>

    </LinearLayout>

    <TextView
        android:id="@+id/meal_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line_editor_header"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/order_line_editor_margin"
        android:layout_marginLeft="@dimen/order_line_editor_margin"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/order_line_editor_margin"
        android:layout_marginRight="@dimen/order_line_editor_margin"
        android:textSize="@dimen/order_line_editor_desc_size"
        tools:text="Guardada entre dos panes de patata estilo brioche, jugosa carne a la parrilla acompañada de fresca lechuga, suave cebolla, exquisita salsa de tomate y deliciosas sabanitas de mozzarella." />

    <LinearLayout
        android:id="@+id/meal_allergens"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/meal_desc"
        android:layout_marginStart="@dimen/order_line_editor_margin"
        android:layout_marginLeft="@dimen/order_line_editor_margin"
        android:layout_marginTop="@dimen/order_line_editor_margin"
        android:layout_marginBottom="@dimen/order_line_editor_margin"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/allergen_icon_0"
            android:layout_width="@dimen/order_line_editor_allergen_icon_size"
            android:layout_height="@dimen/order_line_editor_allergen_icon_size"
            android:scaleType="fitCenter"
            android:contentDescription="@string/app_default_image_desc"
            android:layout_margin="@dimen/order_line_editor_margin_tiny"
            android:visibility="gone"/>
        <ImageView
            android:id="@+id/allergen_icon_1"
            android:layout_width="@dimen/order_line_editor_allergen_icon_size"
            android:layout_height="@dimen/order_line_editor_allergen_icon_size"
            android:scaleType="fitCenter"
            android:contentDescription="@string/app_default_image_desc"
            android:layout_margin="@dimen/order_line_editor_margin_tiny"
            android:visibility="gone"/>
        <ImageView
            android:id="@+id/allergen_icon_2"
            android:layout_width="@dimen/order_line_editor_allergen_icon_size"
            android:layout_height="@dimen/order_line_editor_allergen_icon_size"
            android:scaleType="fitCenter"
            android:contentDescription="@string/app_default_image_desc"
            android:layout_margin="@dimen/order_line_editor_margin_tiny"
            android:visibility="gone"/>
        <ImageView
            android:id="@+id/allergen_icon_3"
            android:layout_width="@dimen/order_line_editor_allergen_icon_size"
            android:layout_height="@dimen/order_line_editor_allergen_icon_size"
            android:scaleType="fitCenter"
            android:contentDescription="@string/app_default_image_desc"
            android:layout_margin="@dimen/order_line_editor_margin_tiny"
            android:visibility="gone"/>

    </LinearLayout>

    <View
        android:id="@+id/meal_divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/meal_allergens"
        android:layout_marginStart="@dimen/table_view_header_divider_margin"
        android:layout_marginLeft="@dimen/table_view_header_divider_margin"
        android:layout_marginEnd="@dimen/table_view_header_divider_margin"
        android:layout_marginRight="@dimen/table_view_header_divider_margin"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:id="@+id/item_count_control"
        android:layout_width="match_parent"
        android:layout_height="@dimen/order_line_editor_count_layout_height"
        android:layout_below="@id/meal_divider2"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageButton
            android:id="@+id/item_minus_button"
            android:layout_width="@dimen/order_line_editor_count_buttons_size"
            android:layout_height="@dimen/order_line_editor_count_buttons_size"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/minusbutton"
            android:contentDescription="@string/app_default_image_desc"
            style="?android:attr/borderlessButtonStyle"/>

        <TextView
            android:id="@+id/item_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/order_line_editor_count_textView_size"
            tools:text="1" />

        <ImageButton
            android:id="@+id/item_add_button"
            android:layout_width="@dimen/order_line_editor_count_buttons_size"
            android:layout_height="@dimen/order_line_editor_count_buttons_size"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/addbutton"
            android:contentDescription="@string/app_default_image_desc"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>

    <EditText
        android:id="@+id/item_notes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/item_count_control"
        android:layout_marginTop="@dimen/order_line_editor_margin"
        android:layout_marginEnd="@dimen/order_line_editor_margin"
        android:layout_marginLeft="@dimen/order_line_editor_margin"
        android:layout_marginRight="@dimen/order_line_editor_margin"
        android:layout_marginStart="@dimen/order_line_editor_margin"
        android:layout_marginBottom="@dimen/order_line_editor_margin"
        android:background="@color/order_line_editor_notes_color"
        android:clickable="true"
        android:focusable="true"
        android:enabled="true"
        android:hint="@string/order_line_editor_notes_hint"
        android:inputType="textCapWords|textAutoCorrect|textAutoComplete|textMultiLine"
        android:textSize="@dimen/order_line_editor_notes_size"
        android:gravity="top|start"
        tools:text="" />

</RelativeLayout>